--- a/index.html
+++ b/index.html
@@ -58,17 +58,17 @@
       <div class="intro-main">
         <div class="intro-main-left">
           <ul class="slick01">
-            <li><img src="https://github.com/HarukiSoma/practise2/blob/master/%E3%82%BD%E3%83%95%E3%82%A1%E3%83%BC.jpg?raw=true"></li>
-            <li><img src="https://github.com/HarukiSoma/practise2/blob/master/%E5%85%A8%E4%BD%93.jpg?raw=true"></li>
-            <li><img src="https://github.com/HarukiSoma/practise2/blob/master/%E5%BA%97%E5%89%8D.jpg?raw=true"></li>
-            <li><img src="https://github.com/HarukiSoma/practise2/blob/master/%E5%BA%A7%E3%82%8B%E3%81%A8%E3%81%93.jpg?raw=true"></li>
-            <li><img src="https://github.com/HarukiSoma/practise2/blob/master/%E7%AA%93.jpg?raw=true"></li>
+            <li><img src="https://github.com/mainprograming/bibian/blob/master/%E7%94%BB%E5%83%8F/%E3%83%93%E3%83%93%E3%82%A2%E3%83%B3-%E7%94%BB%E5%83%8F/%E3%82%BD%E3%83%95%E3%82%A1%E3%83%BC.jpg"></li>
+            <li><img src="https://github.com/mainprograming/bibian/blob/master/%E7%94%BB%E5%83%8F/%E3%83%93%E3%83%93%E3%82%A2%E3%83%B3-%E7%94%BB%E5%83%8F/%E5%BA%97%E5%89%8D.jpg"></li>
+            <li><img src="https://github.com/mainprograming/bibian/blob/master/%E7%94%BB%E5%83%8F/%E3%83%93%E3%83%93%E3%82%A2%E3%83%B3-%E7%94%BB%E5%83%8F/%E7%AA%93.jpg"></li>
+            <li><img src="https://github.com/mainprograming/bibian/blob/master/%E7%94%BB%E5%83%8F/%E3%83%93%E3%83%93%E3%82%A2%E3%83%B3-%E7%94%BB%E5%83%8F/%E5%BA%A7%E3%82%8B%E3%81%A8%E3%81%93.jpg"></li>
+            <li><img src="https://github.com/mainprograming/bibian/blob/master/%E7%94%BB%E5%83%8F/%E3%83%93%E3%83%93%E3%82%A2%E3%83%B3-%E7%94%BB%E5%83%8F/%E5%85%A8%E4%BD%93.jpg?raw=true"></li>
           </ul>
         </div>
         <div class="intro-main-right">
           <h1>オーナーのご紹介</h1>
           <div class="intro-main-right-text">
-            <img src="https://github.com/HarukiSoma/practise2/blob/master/IMG_0028.JPG?raw=true">
+            <img src="https://raw.githubusercontent.com/mainprograming/bibian/master/%E7%94%BB%E5%83%8F/%E3%83%93%E3%83%93%E3%82%A2%E3%83%B3-%E7%94%BB%E5%83%8F/IMG_0028.JPG">
             <p>ビューティーサロン・ビビアンは、1990年12月8日に設立致しまして、今年で創業３０年を迎えることができました。ワンオーナーサロンでお客様をお迎えしており、1対1でご対応をさせていただいております。また、美容歴30年以上の女性オーナーが、シャンプーから仕上げ迄をご担当致しております。お客様一人一人のご要望にご期待できるように、ゆっくりと時間をかけてカウセリングを行わせて頂いております。お客様にとって安心して過ごせるお時間をお作りするために、お店の雰囲気はレトロなものになっております。皆々様方、どうぞ当店で見た目も心もごゆっくりしていてください。</p>
           </div>
         </div>
