--- a/index.html
+++ b/index.html
@@ -58,11 +58,11 @@
       <div class="intro-main">
         <div class="intro-main-left">
           <ul class="slick01">
-            <li><img src="https://github.com/mainprograming/bibian/blob/master/%E7%94%BB%E5%83%8F/%E3%83%93%E3%83%93%E3%82%A2%E3%83%B3-%E7%94%BB%E5%83%8F/%E3%82%BD%E3%83%95%E3%82%A1%E3%83%BC.jpg"></li>
-            <li><img src="https://github.com/mainprograming/bibian/blob/master/%E7%94%BB%E5%83%8F/%E3%83%93%E3%83%93%E3%82%A2%E3%83%B3-%E7%94%BB%E5%83%8F/%E5%BA%97%E5%89%8D.jpg"></li>
-            <li><img src="https://github.com/mainprograming/bibian/blob/master/%E7%94%BB%E5%83%8F/%E3%83%93%E3%83%93%E3%82%A2%E3%83%B3-%E7%94%BB%E5%83%8F/%E7%AA%93.jpg"></li>
-            <li><img src="https://github.com/mainprograming/bibian/blob/master/%E7%94%BB%E5%83%8F/%E3%83%93%E3%83%93%E3%82%A2%E3%83%B3-%E7%94%BB%E5%83%8F/%E5%BA%A7%E3%82%8B%E3%81%A8%E3%81%93.jpg"></li>
+            <li><img src="https://github.com/mainprograming/bibian/blob/master/%E7%94%BB%E5%83%8F/%E3%83%93%E3%83%93%E3%82%A2%E3%83%B3-%E7%94%BB%E5%83%8F/%E3%82%BD%E3%83%95%E3%82%A1%E3%83%BC.jpg?raw=true"></li>
             <li><img src="https://github.com/mainprograming/bibian/blob/master/%E7%94%BB%E5%83%8F/%E3%83%93%E3%83%93%E3%82%A2%E3%83%B3-%E7%94%BB%E5%83%8F/%E5%85%A8%E4%BD%93.jpg?raw=true"></li>
+            <li><img src="https://github.com/mainprograming/bibian/blob/master/%E7%94%BB%E5%83%8F/%E3%83%93%E3%83%93%E3%82%A2%E3%83%B3-%E7%94%BB%E5%83%8F/%E5%BA%97%E5%89%8D.jpg?raw=true"></li>
+            <li><img src="https://github.com/mainprograming/bibian/blob/master/%E7%94%BB%E5%83%8F/%E3%83%93%E3%83%93%E3%82%A2%E3%83%B3-%E7%94%BB%E5%83%8F/%E5%BA%A7%E3%82%8B%E3%81%A8%E3%81%93.jpg?raw=true"></li>
+            <li><img src="https://github.com/mainprograming/bibian/blob/master/%E7%94%BB%E5%83%8F/%E3%83%93%E3%83%93%E3%82%A2%E3%83%B3-%E7%94%BB%E5%83%8F/%E7%AA%93.jpg?raw=true"></li>
           </ul>
         </div>
         <div class="intro-main-right">
